@@ -13,6 +13,12 @@ static void deallocate(xmlParserCtxtPtr ctxt)
   NOKOGIRI_DEBUG_END(handler);
 }
 
+/*
+ * call-seq:
+ *  parse_io(io, encoding)
+ *
+ * Parse +io+ object with +encoding+
+ */
 static VALUE parse_io(VALUE klass, VALUE io, VALUE encoding)
 {
   xmlCharEncoding enc = (xmlCharEncoding)NUM2INT(encoding); 
@@ -29,12 +35,24 @@ static VALUE parse_io(VALUE klass, VALUE io, VALUE encoding)
   return Data_Wrap_Struct(klass, NULL, deallocate, ctxt);
 }
 
+/*
+ * call-seq:
+ *  parse_file(filename)
+ *
+ * Parse file given +filename+
+ */
 static VALUE parse_file(VALUE klass, VALUE filename)
 {
   xmlParserCtxtPtr ctxt = xmlCreateFileParserCtxt(StringValuePtr(filename));
   return Data_Wrap_Struct(klass, NULL, deallocate, ctxt);
 }
 
+/*
+ * call-seq:
+ *  parse_memory(data)
+ *
+ * Parse the XML stored in memory in +data+
+ */
 static VALUE parse_memory(VALUE klass, VALUE data)
 {
   if(Qnil == data) rb_raise(rb_eArgError, "data cannot be nil");
@@ -49,6 +67,12 @@ static VALUE parse_memory(VALUE klass, VALUE data)
   return Data_Wrap_Struct(klass, NULL, deallocate, ctxt);
 }
 
+/*
+ * call-seq:
+ *  parse_with(sax_handler)
+ *
+ * Use +sax_handler+ and parse the current document
+ */
 static VALUE parse_with(VALUE self, VALUE sax_handler)
 {
   if(!rb_obj_is_kind_of(sax_handler, cNokogiriXmlSaxParser))
@@ -74,6 +98,44 @@ static VALUE parse_with(VALUE self, VALUE sax_handler)
   NOKOGIRI_SAX_TUPLE_DESTROY(ctxt->userData);
 }
 
+/*
+ * call-seq:
+ *  replace_entities=(boolean)
+ *
+ * Should this parser replace entities?  &amp; will get converted to '&' if
+ * set to true
+ */
+static VALUE set_replace_entities(VALUE self, VALUE value)
+{
+  xmlParserCtxtPtr ctxt;
+  Data_Get_Struct(self, xmlParserCtxt, ctxt);
+
+  if(Qfalse == value)
+    ctxt->replaceEntities = 0;
+  else
+    ctxt->replaceEntities = 1;
+
+  return value;
+}
+
+/*
+ * call-seq:
+ *  replace_entities
+ *
+ * Should this parser replace entities?  &amp; will get converted to '&' if
+ * set to true
+ */
+static VALUE get_replace_entities(VALUE self)
+{
+  xmlParserCtxtPtr ctxt;
+  Data_Get_Struct(self, xmlParserCtxt, ctxt);
+
+  if(0 == ctxt->replaceEntities)
+    return Qfalse;
+  else
+    return Qtrue;
+}
+
 void init_xml_sax_parser_context()
 {
   VALUE nokogiri  = rb_define_module("Nokogiri");
@@ -88,4 +150,6 @@ void init_xml_sax_parser_context()
   rb_define_singleton_method(klass, "file", parse_file, 1);
 
   rb_define_method(klass, "parse_with", parse_with, 1);
+  rb_define_method(klass, "replace_entities=", set_replace_entities, 1);
+  rb_define_method(klass, "replace_entities", get_replace_entities, 0);
 }
